[package]
name = "http-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
futures-util = "0.3.29"
hyper = { version = "0.14.27", features = ["server", "http1", "http2", "tcp", "stream"] }
rcgen = "0.11.3"
rustls-pemfile = "1.0.3"
tls-listener = { version = "0.7.0", features = ["hyper-h1", "hyper-h2", "rustls"] }
tokio = { version = "1.33.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-rustls = "0.24.1"
tokio-util = "0.7.10"
