[package]
name = "http-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["full"] }
rcgen = "0.13.1"
rustls-pemfile = "2.1.2"
tokio = { version = "1.37.0", features = ["fs", "macros", "rt", "rt-multi-thread", "net"] }
tokio-rustls = "0.26.0"
tokio-util = "0.7.10"
